Crumb CSRF Added
Crumb CSRF, Tag Manager  Added. Fixed Cookie Banner issue

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -18,6 +18,18 @@
   {% endif %}
 {% endblock %}
 
+{% block footer %}
+  {{ govukFooter({
+    meta: {
+      items: [
+        {
+          href: "/site-cookies",
+          text: "Cookies"
+        }
+      ]
+    }
+  }) }}
+{% endblock %}
 {% block bodyEnd %}
   <%= htmlWebpackPlugin.tags.bodyTags %>
 {% endblock %}
