--- a/app/templates/irrigated-land.njk
+++ b/app/templates/irrigated-land.njk
@@ -24,6 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/irrigated-land" novalidate="novalidate">
+        <input type="hidden" name="crumb" value={{crumb}} />
         {{ govukInput(currentInput) }}
         {{ govukInput(targetInput) }}
         {{ govukButton({
