--- a/app/templates/irrigation-water-source.njk
+++ b/app/templates/irrigation-water-source.njk
@@ -31,6 +31,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/irrigation-water-source" novalidate="novalidate">
+        <input type="hidden" name="crumb" value={{crumb}} />
         {{ govukCheckboxes(waterSourceCurrent) }}
         {{ govukCheckboxes(waterSourcePlanned) }}
         {{ govukButton({
