--- a/app/templates/project-cost.njk
+++ b/app/templates/project-cost.njk
@@ -27,6 +27,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/project-cost" novalidate>
+        <input type="hidden" name="crumb" value={{crumb}} />
         {{ govukInput(inputProjectCost) }}
         {{ govukButton({
           text: "Continue"
