--- a/app/templates/project-start.njk
+++ b/app/templates/project-start.njk
@@ -25,6 +25,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form method="POST" action="/project-start" novalidate>
+        <input type="hidden" name="crumb" value={{crumb}} />
         {{ govukRadios(radios) }}
 
         {{ govukDetails({
