Cookie policy, Tag manager & Crumb CSRF (#61)
* Cookie Policy/Tag Manager/Error pages/Crumb CSRF/HTTP Header
Co-authored-by: Paul Andrews <58770589+paulsimonandrews@users.noreply.github.com>

--- a/app/assets/src/layout.njk
+++ b/app/assets/src/layout.njk
@@ -1,11 +1,36 @@
 {% extends "govuk/template.njk" %}
 
 {% block pageTitle %}GOV.UK - Defra grants{% endblock %}
-
 {% block head %}
+  <meta name="robots" content="noindex">
   <%= htmlWebpackPlugin.tags.headTags %>
+  {% if cookiesPolicy.analytics %}
+    {% include "tag-manager/head-content.njk" %}
+  {% endif %}
 {% endblock %}
 
+{% block bodyStart %}
+  {% if not cookiesPolicy.confirmed %}
+    {% include "cookies/cookie-banner.njk"  %}
+  {% endif %}
+
+  {% if cookiesPolicy.analytics %}
+    {% include "tag-manager/body-content.njk" %}
+  {% endif %}
+{% endblock %}
+
+{% block footer %}
+  {{ govukFooter({
+    meta: {
+      items: [
+        {
+          href: "/site-cookies",
+          text: "Cookies"
+        }
+      ]
+    }
+  }) }}
+{% endblock %}
 {% block bodyEnd %}
   <%= htmlWebpackPlugin.tags.bodyTags %>
 {% endblock %}
